--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Use Node.js 18
         uses: actions/setup-node@v3
@@ -43,13 +44,13 @@ jobs:
           docker push $REGISTRY:release-${{ github.run_number }}
           docker push $REGISTRY:release-${{ github.run_number }}_latest
 
-      - name: Create release branch
+      - name: Push release branch
+        env:
+          TOKEN: ${{ secrets.GH_PAT }}
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git checkout main
           git pull
           git checkout -b releases/${{ github.run_number }}
-          git push origin releases/${{ github.run_number }}
-
-      # Можно сюда добавить шаги по обновлению CHANGELOG.md и созданию Issue, если хочешь
+          git push https://x-access-token:${TOKEN}@github.com/${{ github.repository }} HEAD:releases/${{ github.run_number }}
