Fix author display in release comment in fix-release.yml

--- a/.github/workflows/fix-release.yml
+++ b/.github/workflows/fix-release.yml
@@ -79,7 +79,7 @@ jobs:
           
           COMMENT="🛠 **Фикс релиза $VERSION ($FIX_ID)**  
 📅 Дата: $DATE  
-👤 Автор: @$AUTHOR  
+👤 Автор: $AUTHOR  
 🔢 Коммиты:
 $COMMITS
 
