--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,7 @@ on:
 env:
   REGISTRY: ${{ secrets.REGISTRY }}
   GH_TOKEN: ${{ secrets.GH_PAT }}
+  YC_DOCKER_AUTH: ${{ secrets.YC_DOCKER_AUTH }}
 
 jobs:
   release:
@@ -15,7 +16,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Use Node.js 18
+      - name: Setup Node.js 18
         uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -33,29 +34,28 @@ jobs:
         run: npm run build
 
       - name: Login to Yandex Container Registry
-        run: echo ${{ secrets.YC_DOCKER_AUTH }} | docker login --username oauth --password-stdin cr.yandex
+        run: echo "$YC_DOCKER_AUTH" | docker login --username oauth --password-stdin cr.yandex
 
       - name: Build Docker image
         run: |
-          docker build -t $REGISTRY:release-${{ github.run_number }} .
-          docker tag $REGISTRY:release-${{ github.run_number }} $REGISTRY:release-${{ github.run_number }}_latest
+          TAG=release-${{ github.run_number }}
+          docker build -t $REGISTRY:$TAG .
+          docker tag $REGISTRY:$TAG $REGISTRY:${TAG}_latest
 
-      - name: Push Docker image
+      - name: Push Docker images
         run: |
-          docker push $REGISTRY:release-${{ github.run_number }}
-          docker push $REGISTRY:release-${{ github.run_number }}_latest
+          TAG=release-${{ github.run_number }}
+          docker push $REGISTRY:$TAG
+          docker push $REGISTRY:${TAG}_latest
 
-      - name: Create release branch and tag
+      - name: Create and push git tag
         env:
           TOKEN: ${{ secrets.GH_PAT }}
         run: |
+          TAG=release-${{ github.run_number }}
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git checkout main
-          git pull
-          git checkout -b releases/${{ github.run_number }}
-          git push https://x-access-token:${TOKEN}@github.com/${{ github.repository }} HEAD:releases/${{ github.run_number }}
-          git tag release-${{ github.run_number }}
+          git tag $TAG
           git push https://x-access-token:${TOKEN}@github.com/${{ github.repository }} --tags
 
       - name: Create release issue
@@ -64,13 +64,22 @@ jobs:
           REGISTRY: ${{ secrets.REGISTRY }}
           VERSION: ${{ github.run_number }}
         run: |
-          echo "$GH_TOKEN" | gh auth login --with-token
-          unset GH_TOKEN
-
-          PREV_TAG=$(git describe --tags --abbrev=0 release-$((VERSION-1)) || echo "None")
-          COMMITS=$(git log ${PREV_TAG}..HEAD --oneline || echo "No commits found")
-
+          PREV_TAG=$(git describe --tags --abbrev=0 release-$((VERSION-1)) || echo "")
+          if [ -z "$PREV_TAG" ]; then
+            COMMITS=$(git log --oneline -n 10) # fallback, last 10 commits
+          else
+            COMMITS=$(git log $PREV_TAG..HEAD --oneline)
+          fi
           ISSUE_TITLE="Release $VERSION"
-          ISSUE_BODY="Release date: $(date -u)\nAuthor: ${{ github.actor }}\nVersion: $VERSION\n\nCommits since last release:\n$COMMITS\n\nDocker image:\n$REGISTRY:release-$VERSION"
+          ISSUE_BODY="Release date: $(date -u)
+Author: ${{ github.actor }}
+Version: $VERSION
+
+Commits since last release:
+$COMMITS
+
+Docker images:
+$REGISTRY:release-$VERSION
+$REGISTRY:release-$VERSION_latest"
 
           gh issue create --title "$ISSUE_TITLE" --body "$ISSUE_BODY"
