--- a/.github/workflows/fix-release.yml
+++ b/.github/workflows/fix-release.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run type check and tests
         run: |
-          npm run typecheck || exit 1
+          npm run lint || exit 1
           npm run test || exit 1
 
       - name: Fix code
